reverts to just click ui, semi finished reusable scroll feature available, but has issues with collapsing items of variable height. could be useful for other use cases

--- a/source/sass/_site.scss
+++ b/source/sass/_site.scss
@@ -683,7 +683,7 @@ $sm-mobile-only: max-width 600px;
         cursor: pointer;
         &::after {
             font-family: Material Icons;
-            margin-left: 0.2em;
+            margin-left: 0.2m;
             font-size: 26px;
             line-height: 0.5;
             color: $gray-10;
@@ -703,6 +703,7 @@ $sm-mobile-only: max-width 600px;
         margin-bottom: 40px;
         font-size: 18px;
         font-weight: 700;
+        // min-height: 80px;
         &.m-active {
             display: block;
         }
